[tool.poetry]
name = "nuketoolsst"
version = "0.1.0"
description = ""
authors = ["virgilsisoe <virgilsisoe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pdoc = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
pytest-randomly = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
